<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_students">"Welcome to Student Tracker!\n\nYou don't have any students to display.\n\nTo add students, press <font fgcolor="#ffffffff">
    <b>Menu</b></font> and touch:\n\n<li><font fgcolor="#ffffffff">
    <b>Add Student</b></font> to create a new student from scratch\n</li>"</string>
    <string name="app_name">Student Tracker</string>
    <color name="my_backgroundcolor">#003146</color>
    <string name="add_student">Add Student</string>
    <string name="import_student">Import Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
    <string name="bookname">Book Name</string>
    <string name="pagenbr">Page Number</string>
    <string name="paragraphnbr">Paragraph Number</string>
    <string name="confirm">Done</string>
    <string name="deleteConfirmation_title">Delete</string>
    <string name="deleteConfirmation">This student will be deleted.</string>
</resources>
